--- a/miniprogram/pages/addService/addService.wxss
+++ b/miniprogram/pages/addService/addService.wxss
@@ -90,6 +90,20 @@
 } */
 
 
+.saveData{
+  display: flex;
+  justify-content: space-around;
+  margin-top:50rpx;
+  padding:0 100rpx;
+}
+ .saveData button{
+   font-size:28rpx;
+   width:160rpx;
+ }
+.cancelSave{
+  border:1px solid #ccc;
+}
+
 .d-none{
   display:none;
 }
